crates/strider-analyze/tests/snapshots/v2__aarch64be__calling_convention__sink16.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "7" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v8" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v8" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "9" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "10" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "11" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "12" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0x3c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "15" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v16" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v16" -> "7" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "17" -> "7" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "18" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v19" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v19" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="arg[7] ← w7", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "21" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v22" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v22" -> "18" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="arg[6] ← w6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "21" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "24" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v25" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v25" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="arg[5] ← w5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "27" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v28" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v28" -> "24" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "29" -> "24" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="arg[4] ← w4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "27" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "30" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v31" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v31" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "32" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="arg[3] ← w3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "30" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "33" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v34" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v34" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "35" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="arg[2] ← w2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "33" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "36" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v37" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v37" -> "33" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "38" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "4" -> "38" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "36" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "39" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v40" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v40" -> "36" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "41" -> "36" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "3" -> "41" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "39" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "42" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "44" -> "43" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "44" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x10000000000000034:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "46" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "48" -> "47" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "48" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0x1000000000000002c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "46" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "51" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "51" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "52" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x10000000000000024:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "50" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "54" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "55" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "56" -> "55" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "56" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x1000000000000001c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "54" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "58" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "60" -> "59" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "60" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x10000000000000014:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "58" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "62" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "64" -> "63" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "64" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0x1000000000000000c:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "62" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "66" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "67" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "68" -> "67" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "68" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="const 0x10000000000000004:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "66" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "70" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "71" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "72" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "73" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "74" -> "73" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "73" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "75" -> "74" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "74" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "41" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
